<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addStory"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_add_box"
        android:title="@string/add_story" />

    <item
        android:id="@+id/setting"
        android:title="@string/setting" />

    <item
        android:id="@+id/logout"
        android:title="@string/logout" />
</menu>